--- a/projects/web/templates/auth/index.html.twig
+++ b/projects/web/templates/auth/index.html.twig
@@ -1,20 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AuthController!{% endblock %}
+{% block title %}Hello AuthController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<div>
+		{% for owner in hwi_oauth_resource_owners() %}
+			<a href="{{ hwi_oauth_login_url(owner) }}">
+				Continuar con
+				{{ owner | trans({}, 'HWIOAuthBundle') }}
+			</a>
+		{% endfor %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+		<section>
+			<h1>Registro de Usuario</h1>
+			<form action="{{ path('app_auth') }}" method="post">
+				<input type="text" name="firstName" id="firstName" placeholder="Nombre">
+				<input type="text" name="lastName" id="lastName" placeholder="Apellido">
+				<input type="text" name="phone" id="phone" placeholder="Teléfono">
+				<input type="text" name="email" id="email" placeholder="Email">
+				<input type="password" name="password" id="password" placeholder="Contraseña">
+				<input type="password" name="confirm_password" id="confirm_password" placeholder="Confirmar contraseña">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/src/Controller/AuthController.php</code></li>
-        <li>Your template at <code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/templates/auth/index.html.twig</code></li>
-    </ul>
-</div>
-{% endblock %}
+				<input type="checkbox" name="emailNotifications" id="emailNotifications"/>
+
+				<button type="submit" class="btn btn-primary">Submit</button>
+
+			</form>
+		</form>
+	</section>
+</div>{% endblock %}
