WEB | make login functionlity
- Hash the password this time

--- a/projects/web/templates/auth/register.html.twig
+++ b/projects/web/templates/auth/register.html.twig
@@ -14,7 +14,7 @@
 
 		<section>
 			<h1>Registro de Usuario</h1>
-			<form action="{{ path('app_auth') }}" method="post">
+			<form action="{{ path('app_auth_register') }}" method="post">
 				<input type="text" name="firstName" id="firstName" placeholder="Nombre">
 				<input type="text" name="lastName" id="lastName" placeholder="Apellido">
 				<input type="text" name="phone" id="phone" placeholder="Teléfono">
