--- a/projects/web/templates/auth/register.html.twig
+++ b/projects/web/templates/auth/register.html.twig
@@ -178,6 +178,12 @@
 			color: #721c24;
 			border: 1px solid #f5c6cb;
 		}
+
+		.alert-info {
+			background: #d1ecf1;
+			color: #0c5460;
+			border: 1px solid #bee5eb;
+		}
 	</style>
 
 	<div class="auth-container">
@@ -196,6 +202,12 @@
 
 			{% for message in app.flashes('error') %}
 				<div class="alert alert-error">
+					{{ message }}
+				</div>
+			{% endfor %}
+
+			{% for message in app.flashes('info') %}
+				<div class="alert alert-info">
 					{{ message }}
 				</div>
 			{% endfor %}
