WEB | STYLES | feat: style navigation component
- Create generalized icon component

--- a/projects/web/templates/base.html.twig
+++ b/projects/web/templates/base.html.twig
@@ -20,5 +20,7 @@
 	<body>
 		{% include 'components/NavBar.html.twig' %}
 		{% block body %}{% endblock %}
+
+		<script src="{{ asset('js/menu_navigation.js') }}"></script>
 	</body>
 </html>
