WEB | fix: error when uploading different types of images

--- a/projects/web/templates/lost_pets/create.html.twig
+++ b/projects/web/templates/lost_pets/create.html.twig
@@ -78,7 +78,7 @@
 						}
 					}) }}
 					{{ form_errors(form.animalPhoto) }}
-					<small class="form-text text-muted">Formatos permitidos: JPG, PNG, GIF, WebP. Tamaño máximo: 2MB</small>
+					<small class="form-text text-muted">Formatos permitidos: JPG, PNG, GIF, WebP, AVIF. Tamaño máximo: 2MB</small>
 
 					<div class="mt-2" data-image-upload-target="preview"></div>
 				</div>
