WEB | refac: move custom styles to a more convenient folder

--- a/projects/web/templates/base.html.twig
+++ b/projects/web/templates/base.html.twig
@@ -21,6 +21,6 @@
 		{% include 'components/NavBar.html.twig' %}
 		{% block body %}{% endblock %}
 
-		<script src="{{ asset('js/menu_navigation.js') }}"></script>
+		<script src="{{ asset('page/base/menu_navigation.js') }}"></script>
 	</body>
 </html>
